--- a/css/estilo.css
+++ b/css/estilo.css
@@ -50,8 +50,20 @@ a:hover {
     text-decoration: none;
 }
 
+.list-inline {
+    list-style: none;
+}
+.list-inline li {
+    display: inline-block;
+    padding: 3px 20px;
+}
+
 .divisao {
     border: 1px solid #003d1a;
+}
+
+.hidden {
+    display: none;
 }
 
 .margin20 {
@@ -195,4 +207,9 @@ a:hover {
     margin-left: auto; 
     margin-right: auto; 
     color: #003d1a;
+}
+
+.form-control:focus {
+    border-color: #28794c;
+    box-shadow: 0 0 0 0.2rem hsla(147, 50%, 32%, 0.25);
 }
